--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.5"
+  - "2.7"
   - "3.6"
 addons:
   apt:
@@ -15,4 +15,4 @@ before_install:
   - travis_retry pip install --install-option="--no-cython-compile" Cython==0.22
   - travis_retry pip install numpy scipy nose matplotlib
 install: "pip install -r requirements.txt"
-script: pytest
+script: py.test test.py
